<resources>
    <string name="app_name">IndoorRH</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">RH%</string>
    <string name="second_fragment_label">Settings</string>
    <string name="label_1">Outdoor temperature</string>
    <string name="label_2">Outdoor RH</string>
    <string name="label_3">Indoor temperature</string>
    <string name="label_4">Estimated indoor RH</string>
    <string name="label_FC">Fahrenheit / Celsius</string>
    <string name="mlabel_1">Settings</string>
    <string name="mlabel_2">About</string>
    <string name="Placeholder1">0000</string>
    <string name="Placeholder2">000%</string>
    <string name="Placeholder3">0000</string>
    <string name="Placeholder4">000%</string>
    <string name="label_units_T">Units</string>
    <string-array name="F_C">
        <item>F</item>
        <item>C</item>
    </string-array>
    <string-array name="units_T">
        <item>Fahrenheit</item>
        <item>Celsius</item>
    </string-array>
    <string name="fahrenheit">&#176;F</string>
    <string name="celsius">&#176;C</string>
    <string name="msg_about">About</string>
    <string name="msg_release">GPL release v1.1.2</string>
    <string name="msg_copyr">©2024,2025 Cecil Cheung. PhD</string>
    <string name="msg_desc">Simple app to estimate indoor relative humidity, especially when it has been raining for sometime. \nGPL release version 1.1.x\n©2024,2026 Cecil Cheung, PhD\n</string>
</resources>